Correct a description and a link in www/hacking.html, as a follow-up to r19836.
Patch by: Kobayashi Noritada <nori1@dolphin.c.u-tokyo.ac.jp>

* www/hacking.html (docs): Delete a sentence for an old design
  specification in the DocBook XML version and link to the new HTML
  version.

--- a/www/hacking.html
+++ b/www/hacking.html
@@ -176,16 +176,10 @@ in the description for the svn-breakage list.</p>
 <ol>
 <li><p>Design</p>
 
-     <p>A design spec was written in June 2000, and is a bit out of
-     date.  But it still gives a good theoretical introduction to the
-     inner workings of the repository, and to Subversion's various
-     layers.  The DocBook XML source is in
-     <a href="http://svn.collab.net/repos/svn/trunk/doc/design/"
-     >doc/design/</a> in the Subversion repository trunk,
-     or look at one of the generated versions posted on the Subversion
-     website in the <a
- href="http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=259"
-     >Documentation Folder</a>.</p>
+     <p>A <a href="design.html">design spec</a> was written in June 2000,
+     and is a bit out of date.  But it still gives a good theoretical
+     introduction to the inner workings of the repository, and to
+     Subversion's various layers.</p>
 </li>
 
 <li><p>API documentation</p>
