Some buried mystery of CSS is causing the id="bodycol" added to a few local pages in an attempt to make previewing them locally more similar to the processed versions served from tigris backfire fantastically, so remove it.
* doc/design/to-html.xsl
* www/tools_contrib.html
* www/_template.html

--- a/www/_template.html
+++ b/www/_template.html
@@ -12,7 +12,7 @@
 <title>TITLE</title>
 </head>
 
-<body id="bodycol">
+<body>
 <div class="app">
 
 <p>The whole page, by convention, lies inside a &lt;div class="app"&gt;</p>
