--- a/www/tools_contrib.html
+++ b/www/tools_contrib.html
@@ -12,7 +12,7 @@
 <title>Subversion Tools and Contrib</title>
 </head>
 
-<body id="bodycol">
+<body>
 <div class="app">
 
 <h1>Subversion Tools and Contrib</h1>
