* www/design.html: Fix broken link to bubble-up section.

--- a/www/design.html
+++ b/www/design.html
@@ -14,12 +14,16 @@
 
 <body>
 <div class="app">
+
 <div class="h1">
 <h1 style="text-align: center">Subversion Design</h1>
-</div><p class="warningmark"><em>NOTE: This document is out of date.  The
-              last substantial update was in October 2002 (r3377).  However,
-              people often come here for the section on the <a href="#server.fs.misc.bubble-up">directory bubble-up
-                method</a>, which is still accurate.</em></p>
+</div>
+
+<p class="warningmark"><em>NOTE: This document is out of date.  The last
+  substantial update was in October 2002 (r3377).  However, people often come
+  here for the section on the <a href="#server.fs.struct.bubble-up">directory
+    bubble-up method</a>, which is still accurate.</em></p>
+
 <div class="h1">
 <h2>Table of Contents</h2>
 <ol>
@@ -104,7 +108,9 @@
   </ol>
   </li> <!-- server -->
   <li><a href="#license">License &mdash; Copyright</a></li>
-</ol></div>
+</ol>
+</div>
+
 <!--
   ================================================================
   Copyright (c) 1999-2004 CollabNet.  All rights reserved.
