* www/design.html: Add id="toc" to <ol>. * www/toctool.py:     A new script to automatically regenerate the Design Document ToC.

--- a/www/design.html
+++ b/www/design.html
@@ -26,7 +26,7 @@
 
 <div class="h1">
 <h2>Table of Contents</h2>
-<ol>
+<ol id="toc">
   <li><a href="#goals">Goals &mdash; The goals of the Subversion project</a>
   <ol>
     <li><a href="#goals.rename-remove-resurrect">Rename/removal/resurrection support</a></li>
