--- a/www/project_status.html
+++ b/www/project_status.html
@@ -73,6 +73,9 @@ Subversion 2.0.</p>
 
 <ul>
   <li>
+    <b>Subversion 1.3.2</b> (Wednesday, 31 May 2006): Bugfix release.
+  </li>
+  <li>
     <b>Subversion 1.3.1</b> (Monday, 3 April 2006): Bugfix release.
   </li>
   <li>
