* www/project_packages.html: note that the win32 binary package was built against httpd 2.0, not 2.2.  Closes issue 2562.

--- a/www/project_packages.html
+++ b/www/project_packages.html
@@ -257,7 +257,9 @@ href="http://metissian.com/projects/macosx/subversion/"
 found in <a
 href="http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=91"
 >this directory</a> of the file-sharing area.  The packages are ".zip"
-files.</p>
+files.  Note that the <tt>mod_dav_svn</tt> module included in this
+package was compiled against Apache httpd 2.0, and thus will
+<em>not</em> work with Apache httpd 2.2.</p>
 
 <div style="background-color: yellow; color: red;">
 <p>Please do not ask about <strong>Python 2.4</strong> bindings for Windows.
