--- a/www/hacking.html
+++ b/www/hacking.html
@@ -161,7 +161,7 @@ not sure about an issue, post a question to dev@subversion.tigris.org.
 
 <p>Another way to help is to set up automated builds and test suite
 runs of Subversion on some platform, and have the output sent to the
-svn-breakage@subversion.tigris.org mailing list.  See fooo more details at
+svn-breakage@subversion.tigris.org mailing list.  See more details at
 <a href="http://subversion.tigris.org/servlets/ProjectMailingListList"
         >http://subversion.tigris.org/servlets/ProjectMailingListList</a>
 in the description for the svn-breakage list.</p>
@@ -2324,11 +2324,11 @@ prerelease.</p>
 but 'svn --version' still produces special output:</p>
 
 <pre>
-   version 1.3.7 (dev build, rXXXX)
+   version 1.3.7 (dev build)
 </pre>
 
-<p>The "rXXXX" is not important (if it proves difficult to implement,
-we may omit it).  The important thing is to say "dev build".  This
+<p>The version number is the next version that the development was
+working towards.  The important thing is to say "dev build".  This
 indicates that the build came from a working copy, which is useful in
 bug reports.</p>
 
