--- a/www/faq.html
+++ b/www/faq.html
@@ -950,13 +950,13 @@ server?</h3>
 
 <p>If you are using a repository with the Berkeley DB back end
 (default for repositories created with Subversion 1.0 and 1.1, not the
-default thereafter), do <i>not</i> access the repository via NFS.
-Berkeley DB <a
-href="http://www.sleepycat.com/docs/ref/env/remote.html">does not
-support storage of databases on remote file systems</a>.  Some NFS
-servers claim that they explicitly support use of Berkeley DB on
-NFS-mounted partitions, but we've only ever seen Berkeley DB databases
-get corrupted when living on an NFS or SMB network drive.</p>
+default thereafter), we recommend <i>not</i> storing the repository on
+a remote filesystem (for example, NFS).  While Berkeley DB databases
+and log files can be stored on remote filesystems, the Berkeley DB
+shared region files cannot be stored on a remote filesystem, so the
+repository may be safely accessed by only a single filesystem client,
+and not all Subversion functionality will be available to even that
+one client.</p>
 
 <p>If you are using the <a
 href="http://svn.collab.net/repos/svn/trunk/notes/fsfs">FSFS</a>
