A follow-up to r20316.
* www/faq.html: Rename "dynamic-exec-debugging" to "dynamic-exe-debugging".

--- a/www/faq.html
+++ b/www/faq.html
@@ -233,7 +233,7 @@ a <tt>file:</tt> URL?</a></li>
 <ul>
 <li><a href="#ramdisk-tests">How do I run the regression tests in a
     RAM disk?</a></li>
-<li><a href="#dynamic-exec-debugging">How do I run a debugger on
+<li><a href="#dynamic-exe-debugging">How do I run a debugger on
     dynamic Subversion binaries without having to install
     them?</a></li>
 </ul>
@@ -3343,7 +3343,7 @@ original authoritative discussion on use of RAM disks.</p>
 
 <![CDATA[-----------------------------------------------------------]]>
 
-<div class="h3" id="dynamic-exec-debugging" title="dynamic-exec-debugging">
+<div class="h3" id="dynamic-exe-debugging" title="dynamic-exe-debugging">
 
 <h3>How do I run a debugger on dynamic Subversion binaries without
     having to install them?</h3>
