--- a/www/svn_1.4_releasenotes.html
+++ b/www/svn_1.4_releasenotes.html
@@ -86,6 +86,8 @@ svn to use.  If you are using several versions of Subversion on your
 machine, you need to be careful about which version you use in which
 working copy, to avoid accidentally upgrading the wc structure.</p>
 
+</div>  <!-- wc-format-change -->
+
 <div class="h3" id="output-changes" title="output-changes">
 <h3>Command Line Output Changes</h3>
 
@@ -110,6 +112,8 @@ made to the output:</p>
 
 <div class="h3" id="todo" title="todo">
 <h3>TODO (<em>requires time and people</em>)</h3>
+
+</div>  <!-- todo -->
 
 <div class="h3" id="new-switches" title="new-switches">
 <h3>New subcommand switches</h3>
