A follow-up to r20783 correcting an option name to the 'mount' command.
* www/faq.html
  (ramdisk-tests): It's 'mount -o uid=...', rather than 'user=...'.

--- a/www/faq.html
+++ b/www/faq.html
@@ -3331,7 +3331,7 @@ on the fly with the command:</p>
 <blockquote>
 <div><code>mount -t tmpfs tmpfs
 /path/to/src/subversion/tests/cmdline/svn-test-work
--o user=$USER,mode=770,size=32m</code></div>
+-o uid=$USER,mode=770,size=32m</code></div>
 </blockquote>
 
 <p>Or, for a more permanent solution, add lines like the following in
