--- a/www/links.html
+++ b/www/links.html
@@ -328,6 +328,11 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
                 >http://rapidsvn.tigris.org/</a>
       </p></li>
 
+      <li><p><b>SubversionSharp</b> - C# bindings<br/>
+        <a href="http://www.softec.st/SubversionSharp"
+                >http://www.softec.st/SubversionSharp</a>
+      </p></li>
+
       <li><p><b>PECL SVN (PHP)</b> - PHP bindings<br/>
         <a href="http://pecl.php.net/package/svn"
                 >http://pecl.php.net/package/svn</a>
