--- a/www/tools_contrib.html
+++ b/www/tools_contrib.html
@@ -115,6 +115,7 @@
     <li><a href="#showchange_pl">showchange.pl</a></li>
     <li><a href="#svn_log_pl">svn-log.pl</a></li>
     <li><a href="#svn2cl_sh">svn2cl.sh</a></li>
+    <li><a href="#svn2feed_py">svn2feed.py</a></li>
     <li><a href="#svn2rss_py">svn2rss.py</a></li>
   </ul></li>
   <li><strong>merge</strong><ul>
@@ -899,10 +900,12 @@
   </p>
 
 
-  <h3><a name="svn2rss_py"
-    href="http://svn.collab.net/repos/svn/trunk/contrib/hook-scripts/svn2rss.py">svn2rss.py</a>
+  <h3><a name="svn2feed_py"
+    href="http://svn.collab.net/repos/svn/trunk/contrib/hook-scripts/svn2feed.py">svn2feed.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/contrib/hook-scripts">contrib/hook-scripts</a>)</h3>
-  <p>Generates a RSS 2.0 file containing commit information.</p>
+
+  <p>Generates an RSS 2.0 or Atom 1.0 file containing commit information.</p>
+  <p><a name="svn2rss_py">svn2feed.py was formerly known as svn2rss.py</a></p>
 
 
   <h3><a name="svnperms_py"
