Mention Google's new hosting service.
* www/links.html
  (hosting): Note google, and include a few lines from their hosting FAQ.

--- a/www/links.html
+++ b/www/links.html
@@ -589,6 +589,21 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
               with project and issue management software like Trac and Bugzilla.</em></p>
     </li>
 
+    <li><p><strong>google.com</strong>:
+                   free Subversion hosting<br/>
+       <a href="http://code.google.com/hosting/">http://code.google.com/hosting/</a></p>
+      <p>
+          <dd>"Our new hosting service offers a collaborative development
+            environment that includes:
+            <ul>
+              <li>Project workspaces with simple membership controls</li>
+              <li>Version control via Subversion</li>
+              <li>Issue tracking</li>
+              <li>Mailing lists at groups.google.com"</li>
+            </ul>
+      </dd></p>
+    </li>
+
   </ul>
 
 </div>
