* www/links.html   (hosting): Fix formatting for new google entry

--- a/www/links.html
+++ b/www/links.html
@@ -593,15 +593,12 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
                    free Subversion hosting<br/>
        <a href="http://code.google.com/hosting/">http://code.google.com/hosting/</a></p>
       <p>
-          <dd>"Our new hosting service offers a collaborative development
-            environment that includes:
-            <ul>
-              <li>Project workspaces with simple membership controls</li>
-              <li>Version control via Subversion</li>
-              <li>Issue tracking</li>
-              <li>Mailing lists at groups.google.com"</li>
-            </ul>
-      </dd></p>
+          <em>"Our new hosting service offers a collaborative development
+            environment that includes: project workspaces with simple membership controls;
+              version control via Subversion;
+              issue tracking;
+              mailing lists at groups.google.com."
+      </em></p>
     </li>
 
   </ul>
