* www/links.html   (hosting): Note that google hosting is for open source projects

--- a/www/links.html
+++ b/www/links.html
@@ -590,7 +590,7 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
     </li>
 
     <li><p><strong>google.com</strong>:
-                   free Subversion hosting<br/>
+                   free Subversion hosting for open source projects<br/>
        <a href="http://code.google.com/hosting/">http://code.google.com/hosting/</a></p>
       <p>
           <em>"Our new hosting service offers a collaborative development
