--- a/www/svn-dav-securityspace-survey.html
+++ b/www/svn-dav-securityspace-survey.html
@@ -39,6 +39,12 @@ Survey</a>.  Thanks Security Space!</p>
 <table style="margin-left: auto; margin-right: auto;" border="0"
   cellpadding="5" cellspacing="0">
   <tr><th>Date</th><th># Servers</th></tr>
+  <tr><td>August 2006</td><td style="text-align: right">40,672</td></tr>
+  <tr><td>July 2006</td><td style="text-align: right">38,939</td></tr>
+  <tr><td>June 2006</td><td style="text-align: right">35,082</td></tr>
+  <tr><td>May 2006</td><td style="text-align: right">33,001</td></tr>
+  <tr><td>April 2006</td><td style="text-align: right">29,396</td></tr>
+  <tr><td>March 2006</td><td style="text-align: right">26,540</td></tr>
   <tr><td>February 2006</td><td style="text-align: right">23,861</td></tr>
   <tr><td>January 2006</td><td style="text-align: right">21,084</td></tr>
   <tr><td>December 2005</td><td style="text-align: right">20,278</td></tr>
