--- a/www/tools_contrib.html
+++ b/www/tools_contrib.html
@@ -743,19 +743,19 @@
   <h3><a name="diff_c"
     href="http://svn.collab.net/repos/svn/trunk/tools/diff/diff.c">diff.c</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/diff">tools/diff</a>)</h3>
-  <p>A diff program using subversions diff functions.</p>
+  <p>A diff program using Subversion's diff functions.</p>
 
 
   <h3><a name="diff3_c"
     href="http://svn.collab.net/repos/svn/trunk/tools/diff/diff3.c">diff3.c</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/diff">tools/diff</a>)</h3>
-  <p>A diff3 program using subversions diff functions.</p>
+  <p>A diff3 program using Subversion's diff functions.</p>
 
 
   <h3><a name="diff4_c"
     href="http://svn.collab.net/repos/svn/trunk/tools/diff/diff4.c">diff4.c</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/diff">tools/diff</a>)</h3>
-  <p>A diff4 program using subversions diff functions.</p>
+  <p>A diff4 program using Subversion's diff functions.</p>
 </div>
 
 
