* www/svn_1.4_releasenotes.html (news): Fix a close tag.

--- a/www/svn_1.4_releasenotes.html
+++ b/www/svn_1.4_releasenotes.html
@@ -33,7 +33,7 @@ that will mean 1.4.0 is released.</p>
 <h2>What's New in Subversion 1.4</h2>
 
 <ul>
-  <li><strong>svnsync</bold>, a new repository mirroring tool</li>
+  <li><strong>svnsync</strong>, a new repository mirroring tool</li>
   <li>Huge improvements to the performance of working copies</li>
   <li>Support for BerkeleyDB 4.4 and its "auto recovery" feature</li>
   <li>Speed and size improvements to the binary delta algorithm</li>
