* www/svn_1.4_releasenotes.html:  tweak some wording.

--- a/www/svn_1.4_releasenotes.html
+++ b/www/svn_1.4_releasenotes.html
@@ -34,9 +34,9 @@ that will mean 1.4.0 is released.</p>
 
 <ul>
   <li><strong>svnsync</strong>, a new repository mirroring tool</li>
-  <li>Huge improvements to the performance of working copies</li>
+  <li>Huge working-copy performance improvements</li>
   <li>Support for BerkeleyDB 4.4 and its "auto recovery" feature</li>
-  <li>Speed and size improvements to the binary delta algorithm</li>
+  <li>Size improvements to the binary delta algorithm</li>
   <li>A handful of new command switches</li>
   <li>Many improved APIs</li>
   <li>More than 40 new bugfixes</li>
