* www/hacking.html   Update link to release procedure file, which was deleted in   r20694.

--- a/www/hacking.html
+++ b/www/hacking.html
@@ -2178,7 +2178,7 @@ configuration/build system:</p>
 <div class="h2" id="releasing" title="releasing">
 <h2>How to release a distribution tarball</h2>
 
-<p>See notes/releases.txt.</p>
+<p>See <a href="release-process.html">The Subversion Release Procedure</a>.</p>
 
 </div>
 
