* www/svn_1.4_releasenotes.html: Fix invalid XHTML.

--- a/www/svn_1.4_releasenotes.html
+++ b/www/svn_1.4_releasenotes.html
@@ -213,7 +213,7 @@ format, and will still be readable by older Subversion tools.</p>
 </div> <!-- svndiff1 -->
 
 
-<div class="h3" id="" title="new-switches">
+<div class="h3" id="new-switches" title="new-switches">
 <h3>New subcommand switches</h3>
 
 TODO:  EXPLAIN THESE:
@@ -247,9 +247,6 @@ On OS X, the <tt>svn</tt> client now caches passwords in Keychain,
 rather than in <tt>~/.subversion/auth/</tt>.
 
 </div> <!-- keychain -->
-
-</div>  <!-- enhancements -->
-
 
 <div class="h3" id="apis" title="apis">
 <h3>API improvements (<em>client and server</em>)</h3>
