--- a/www/tools_contrib.html
+++ b/www/tools_contrib.html
@@ -639,10 +639,9 @@
   <h3><a name="po_merge_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/po-merge.py">po-merge.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>Read a single translation entry from the file F and return a
-     tuple with the comments, msgid and msgstr.  The comments is returned
-     as a list of lines which do not end in new-lines.  The msgid and
-     msgstr are strings, possibly with embedded newlines.
+  <p>This script will replace the translations and flags in a po file with
+     the translations and flags in the source po file read from standard
+     input.  Strings that are not found in the source file are left untouched.
   </p>
 
 
