* www/svn_1.4_releasenotes.html: Fix typo.
Patch by: Vlad Georgescu <vgeorgescu@gmail.com>

--- a/www/svn_1.4_releasenotes.html
+++ b/www/svn_1.4_releasenotes.html
@@ -168,7 +168,7 @@ Changes'.</p>
 <h3>BerkeleyDB 4.4 and auto-recovery (<em>server</em>)</h3>
 
 <p>A common problem with previous versions of Subversion is that
-crashed server proceses could leave BerkeleyDB-based repositories in
+crashed server processes could leave BerkeleyDB-based repositories in
 an unusable "wedged" state, requiring administrators to manually
 intervene and bring back online.  (Note: this is not due to bugs in
 BerkeleyDB, but due to the unorthodox way in which Subversion uses
