* www/faq.html   (single-file-checkout): Recommend 'svn export' instead of 'svn cat'.
Patch by: Peter Samuelson <peter@p12n.org>

--- a/www/faq.html
+++ b/www/faq.html
@@ -1958,7 +1958,7 @@ binary.</p>
 <p>Subversion does not support checkout of a single file, it only
 supports checkout of directory structures.</p>
 
-<p>However, you can use 'svn cat' to export a single file.  This will
+<p>However, you can use 'svn export' to export a single file.  This will
 retrieve the file's contents, it just won't create a versioned working
 copy.</p>
 
