--- a/www/faq.html
+++ b/www/faq.html
@@ -2012,7 +2012,7 @@ Windows service, but there are a number of &ldquo;service
 wrappers&rdquo; that can do the job; for example:</p>
 
 <ul>
-<li><a href="http://dark.clansoft.dk/~mbn/svnservice/">SVNService</a>
+<li><a href="http://www.clanlib.org/~mbn/svnservice/">SVNService</a>
 is a free tool written by Magnus Norddahl</li>
 <li><a href="http://support.microsoft.com/kb/q137890/">SrvAny</a>
 is avaliable free of charge from Microsoft</li>
