--- a/www/hacking.html
+++ b/www/hacking.html
@@ -1518,34 +1518,21 @@ example of doing it right:</p>
 <p>This is why a new function, for example, needs only a log entry
 saying "New Function" --- all the details should be in the source.</p>
 
-<p>There are some common-sense exceptions to the need to name
-everything that was changed:</p>
-
-<ul>
-
-<li><p>If you have made a change which requires trivial changes
-       throughout the rest of the program (e.g., renaming a variable),
-       you needn't name all the functions affected, you can just say
-       "All callers changed".</p>
-</li>
-
-<li><p>If you have rewritten a file completely, the reader understands
-       that everything in it has changed, so your log entry may simply
-       give the file name, and say "Rewritten".</p>
-</li>
-
-<li><p>If your change was to multiple files, provide a brief summary
-       of the change at the top of the log message (before the paths
-       and symbols list).</p>
-</li>
-
-</ul>
+<p>You can make common-sense exceptions to the need to name everything
+that was changed.  For example, if you have made a change which
+requires trivial changes throughout the rest of the program (e.g.,
+renaming a variable), you needn't name all the functions affected, you
+can just say "All callers changed".  However, if you rename symbols
+(e.g., to add or remove a library prefix), please mention every
+affected symbol, both old and new&nbsp;&mdash;&nbsp;this is the only
+way the rename of a particular symbol would be traceable later.  See
+r20946 for an example of this.</p>
 
 <p>In general, there is a tension between making entries easy to find
 by searching for identifiers, and wasting time or producing unreadable
-entries by being exhaustive.  Use your best judgment --- and be
-considerate of your fellow developers.  (Also, run "svn log" to see
-how others have been writing their log entries.)</p>
+entries by being exhaustive.  Use the above guidelines and your best
+judgment, and be considerate of your fellow developers.  (Also, run
+"svn log" to see how others have been writing their log entries.)</p>
 
 <p>Log messages for documentation or translation have somewhat looser
 guidelines.  The requirement to name every symbol obviously does not
