* www/faq.html:   Add new troubleshooting question, "I can't add a directory because   Subversion says it's "already under version control"."

--- a/www/faq.html
+++ b/www/faq.html
@@ -229,6 +229,8 @@ a <tt>file:</tt> URL?</a></li>
     stage.  What's wrong?</a></li>
 <li><a href="#freebsd-listen-host">I'm using FreeBSD, and I've started
   svnserve, but it doesn't seem to be listening on port 3690.</a></li>
+<li><a href="#already-under-version-control">I can't add a directory
+    because Subversion says it's "already under version control".</a></li>
 </ul>
 
 <h4>Developer questions:</h4>
@@ -3330,6 +3332,27 @@ solution described here was not mentioned in that thread.</p>
   default; that option tells them to also listen on tcp4.</p>
 </div>
 
+<div class="h3" id="already-under-version-control" title="already-under-version-control">
+<h3>I can't add a directory
+    because Subversion says it's "already under version control".</h3>
+<p>The directory you're trying to add already contains
+  a <tt>.svn</tt> subdirectory, but it's from a different repository
+  than the directory to which you're trying to add it.  This probably
+  happened because you used your operating system's "copy" command to
+  copy one working copy into the current one.</p>
+<p>
+  The quick and dirty solution is to delete all <tt>.svn</tt>
+  directories contained in the directory you're trying to add; this
+  will let the "add" command complete.  If you're using Unix, this
+  command will delete <tt>.svn</tt> directories
+  under <tt>dir</tt>:</p>
+<pre>
+  find dir -type d -name .svn -exec rm -rf {} \;
+</pre>
+<p>However, you should ask yourself <em>why</em> you made this copy;
+  and you should ensure that by adding this directory, you won't be
+  making an unwanted copy of it in your repository.
+</p>
 <![CDATA[=========================================================]]>
 
 </div>
