A follow-up to r21381.
* www/faq.html
  (avoiding-compiler-inlining): Wording tweak.

--- a/www/faq.html
+++ b/www/faq.html
@@ -3460,8 +3460,8 @@ stepping through the code in a debugger.</p>
 running <code>configure</code>.</p>
 
 <p>Remember to undo this operation before installing Subversion from
-source, regenerating config.status, or unsetting <code>CFLAGS</code>
-before running <code>configure</code>.</p>
+source, by regenerating config.status, or unsetting
+<code>CFLAGS</code> before running <code>configure</code>.</p>
 
 </div>
 
