* www/project_packages.html : Clarify that the RPM packages that won't work with      BDB are just the RHEL3 versions.

--- a/www/project_packages.html
+++ b/www/project_packages.html
@@ -109,7 +109,7 @@ href="http://summersoft.fay.ar.us/pub/subversion/latest/"
 The Red Hat Enterprise Linux 3 Subversion 1.2 and later RPMs above
 (from David Summers) are <em>not</em> compiled with Berkeley DB
 support (All other versions are compiled with Berkeley BDB support).
-If you need to access Berkeley DB repositories, these RPMs will not
+If you need to access Berkeley DB repositories, these RHEL3 RPMs will not
 work for you.  (See <a
 href="http://subversion.tigris.org/servlets/BrowseList?listName=dev&amp;from=317936&amp;to=317936&amp;count=21&amp;by=thread&amp;first=1&amp;windowSize=20&amp;selectedPage=1"
 >this thread</a> for details.)  You may want to try different RPMs
